@@ -14,7 +14,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.stream.StreamSupport;
 
-import static java.util.stream.Collectors.toList;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
@@ -37,10 +36,10 @@ public class UserAssembler implements
             final @NonNull UserDto userDto) {
         return EntityModel.of(userDto,
                 linkTo(methodOn(UserController.class)
-                        .getUser(userDto.getId()))
+                        .getUser(userDto.getUsername(), userDto.getId()))
                         .withSelfRel(),
                 linkTo(methodOn(OrderController.class)
-                        .getAllOrdersByUserId(userDto.getId(),
+                        .getAllOrdersByUserId(userDto.getUsername(), userDto.getId(),
                                 PageRequest.of(0, 25, Sort.by("name").ascending())))
                         .withRel("orders"),
                 linkTo(methodOn(CertificateController.class)
@@ -64,7 +63,7 @@ public class UserAssembler implements
         return CollectionModel.of(StreamSupport
                         .stream(users.spliterator(), false)
                         .map(this::toModel)
-                        .collect(toList()),
+                        .toList(),
                 linkTo(methodOn(UserController.class)
                         .getUsers(PageRequest.of(
                                 0, 25,
